initial commit for Chatapp2

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "loginandregister",
   "version": "1.0.0",
-  "description": "chatapp application",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
