--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "author": "rohithsingh",
   "license": "ISC",
   "dependencies": {
+    "agora-rtm-sdk": "^1.3.0",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
@@ -17,6 +19,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "pusher": "^3.0.1",
     "require": "^2.4.20",
     "simple-datetime-formater": "^1.1.3",
     "socket.io": "^2.3.0"
